eks-manifet/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: nocode-app
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate 
  selector:
    matchLabels:
      app: nocode-app
  template:
    metadata:
      labels:
        app: nocode-app
    spec:
      containers:
      - image: minh.nguyen/nocode:v1 #example docker container image 
        name: nocode-app
        ports:
          - containerPort: 80
